@@ -6,13 +6,18 @@ import client.rapid.module.Module;
 import client.rapid.module.ModuleInfo;
 import client.rapid.module.modules.Category;
 import client.rapid.module.settings.Setting;
+import client.rapid.util.PacketUtil;
 import client.rapid.util.PlayerUtil;
+import net.minecraft.network.play.client.C03PacketPlayer;
+import net.minecraft.util.BlockPos;
 
 @ModuleInfo(getName = "Anti Void", getCategory = Category.PLAYER)
 public class AntiVoid extends Module {
-    private final Setting mode = new Setting("Mode", this, "Normal", "Jump");
+    private final Setting mode = new Setting("Mode", this, "Normal", "Jump", "Teleport");
     private final Setting fallDistance = new Setting("Fall Distance", this, 4, 2, 10, false);
     private final Setting height = new Setting("Height", this, 2, 0.42, 10, false);
+
+    private BlockPos groundPos;
 
     public AntiVoid() {
         add(mode, fallDistance, height);
@@ -23,10 +28,13 @@ public class AntiVoid extends Module {
         setTag(mode.getMode());
 
         if(e instanceof EventMotion && e.isPre()) {
-            EventMotion event = (EventMotion)e;
+            EventMotion event = (EventMotion) e;
 
-            if(mc.thePlayer.fallDistance >= fallDistance.getValue() && !PlayerUtil.isBlockUnder()) {
-                switch(mode.getMode()) {
+            if (mc.thePlayer.onGround && !mc.theWorld.isAirBlock(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY - 1, mc.thePlayer.posZ)))
+                groundPos = new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY, mc.thePlayer.posZ);
+
+            if (mc.thePlayer.fallDistance >= fallDistance.getValue() && !PlayerUtil.isBlockUnder()) {
+                switch (mode.getMode()) {
                     case "Normal":
                         event.setY(event.getY() + height.getValue());
                         break;
@@ -34,6 +42,13 @@ public class AntiVoid extends Module {
                         event.setGround(!event.isGround());
                         mc.thePlayer.motionY = height.getValue();
                         mc.thePlayer.fallDistance = 0;
+                        break;
+                    case "Teleport":
+                        if(mc.thePlayer.getDistance(groundPos.getX(), groundPos.getY(), groundPos.getZ()) <= 10) {
+                            mc.thePlayer.setPosition(groundPos.getX(), groundPos.getY(), groundPos.getZ());
+                            mc.thePlayer.fallDistance = 0;
+                            setMoveSpeed(0);
+                        }
                         break;
                 }
             }
