@@ -21,6 +21,7 @@ import net.minecraft.item.*;
 import net.minecraft.network.play.client.*;
 import net.minecraft.potion.Potion;
 import net.minecraft.util.*;
+import org.lwjgl.util.vector.Vector2f;
 
 import java.awt.*;
 import java.lang.reflect.Field;
@@ -29,23 +30,27 @@ import java.util.List;
 
 @ModuleInfo(getName = "Scaffold", getCategory = Category.PLAYER)
 public class Scaffold extends Draggable {
-	private final Setting mode = new Setting("Mode", this, "Normal", "Legit");
-	private final Setting rotations = new Setting("Rotations", this, "None", "Normal", "Opposite Yaw", "Wtf");
-	private final Setting delay = new Setting("Delay", this, 0, 0, 500, true);
+	private final Setting mode = new Setting("Mode", this, "Pre", "Post");
+	private final Setting rotations = new Setting("Rotations", this, "None", "Normal", "Keep");
+	private final Setting safewalk = new Setting("Safewalk", this, "None", "Simple", "Legit");
 	private final Setting tower = new Setting("Tower", this, "None", "NCP", "Slow");
 	private final Setting sprint = new Setting("Sprint", this, "None", "Normal", "No Packet");
+	private final Setting delay = new Setting("Delay", this, 0, 0, 500, true);
 	private final Setting boost = new Setting("Speed Boost", this, 0, 0, 1, false);
 	private final Setting placeOnEnd = new Setting("Place on end", this, true);
+	private final Setting rayCast = new Setting("Ray Cast", this, true);
+	private final Setting strict = new Setting("Strict", this, true);
 	private final Setting eagle = new Setting("Eagle", this, true);
-	private final Setting safewalk = new Setting("Safewalk", this, true);
 	private final Setting keepY = new Setting("Keep Y", this, false);
 	private final Setting swing = new Setting("Swing", this, false);
-
+	private final Setting autoDisable = new Setting("Auto Disable", this, true);
 	private double funnyY;
-	private boolean rotated = false;
+	public static boolean rotated = false;
 
 	private BlockData blockData;
 	private BlockPos blockPos;
+
+	private float yaw, pitch;
 
 	private final List<Block> invalid = Arrays.asList(
 			Blocks.air,
@@ -58,19 +63,22 @@ public class Scaffold extends Draggable {
 			Blocks.crafting_table,
 			Blocks.enchanting_table,
 			Blocks.furnace,
-			Blocks.noteblock
+			Blocks.noteblock,
+			Blocks.torch
 	);
 
 	TimerUtil timer = new TimerUtil();
 
 	public Scaffold() {
 		super(200, 200, 80, 20);
-		add(mode, rotations, tower, sprint, delay, boost, placeOnEnd, eagle, safewalk, keepY, swing);
+		add(mode, rotations, safewalk, tower, sprint, delay, boost, placeOnEnd, rayCast, strict, eagle, keepY, swing, autoDisable);
 	}
 
 	@Override
 	public void onEnable() {
 		rotated = false;
+		yaw = mc.thePlayer.rotationYaw;
+		pitch = mc.thePlayer.rotationPitch;
 	}
 
 	@Override
@@ -89,12 +97,10 @@ public class Scaffold extends Draggable {
 
 	@Override
 	public void onEvent(Event e) {
-		if(e instanceof EventSafewalk && e.isPre() && safewalk.isEnabled()) {
-			e.cancel();
+		setTag(mode.getMode());
 
-			if(mode.getMode().equals("Legit"))
-				sneak(mc.theWorld.getBlockState(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY - 1.0, mc.thePlayer.posZ)).getBlock() == Blocks.air);
-		}
+		if(e instanceof EventSafewalk && e.isPre() && safewalk.getMode().equals("Simple") && !placeOnEnd.isEnabled())
+			e.cancel();
 
 		if(e instanceof EventPacket && e.isPre() && sprint.getMode().equals("No Packet")) {
 			EventPacket event = (EventPacket)e;
@@ -124,99 +130,111 @@ public class Scaffold extends Draggable {
 			}
 		}
 
+		if(e instanceof EventRotation) {
+			EventRotation event = (EventRotation)e;
+
+			if(blockData != null) {
+				float[] rots = RotationUtil.getScaffoldRotations(blockData.getPosition(), blockData.getFace());
+
+				switch (rotations.getMode()) {
+					case "Normal":
+						event.setYaw(mc.thePlayer.rotationYaw - 180);
+						event.setPitch(rots[1]);
+						break;
+					case "Keep":
+						if(rotated) {
+							yaw = mc.thePlayer.rotationYaw - 180;
+							pitch = rots[1];
+						}
+						event.setYaw(yaw);
+						event.setPitch(pitch);
+						break;
+				}
+				if (!rotations.getMode().equals("None")) {
+					mc.thePlayer.rotationYawHead = event.getYaw();
+					mc.thePlayer.rotationPitchHead = event.getPitch();
+				}
+					if (PlayerUtil.hasBlockEquipped() && timer.sleep((long) delay.getValue()) && mode.getMode().equals("Post")) {
+						if (placeOnEnd.isEnabled() && !mc.theWorld.getCollidingBoundingBoxes(mc.thePlayer, mc.thePlayer.getEntityBoundingBox().offset(0.0, -0.001D, 0.0)).isEmpty())
+							return;
+
+						if(rayCast.isEnabled() && !overBlock(blockData.getFace(), blockData.getPosition(), strict.isEnabled()))
+							return;
+
+						if (mc.playerController.onPlayerRightClick(mc.thePlayer, mc.theWorld, mc.thePlayer.inventory.getCurrentItem(), blockData.getPosition(), blockData.getFace(), dataToVec(blockData))) {
+							if (swing.isEnabled())
+								mc.thePlayer.swingItem();
+							else
+								PacketUtil.sendPacket(new C0APacketAnimation());
+
+					}
+				}
+			}
+		}
 		if(e instanceof EventMotion) {
 			if (e.isPre()) {
-				EventMotion event = (EventMotion) e;
-
 				if(eagle.isEnabled())
 					sneak(rotated);
 
+				boolean safewalkthing = mc.theWorld.getBlockState(new BlockPos(mc.thePlayer.posX, mc.thePlayer.posY - 1.0, mc.thePlayer.posZ)).getBlock() == Blocks.air;
+				if(safewalk.getMode().equals("Legit"))
+					sneak(safewalkthing);
+
 				rotated = false;
+
+				if(safewalkthing)
+					rotated = true;
 
 				if(mc.thePlayer.onGround && boost.getValue() != 0)
 					setMoveSpeed(getMoveSpeed() + boost.getValue());
 
-				switch(mode.getMode()) {
-				case "Normal":
-					if (keepY.isEnabled()) {
-						if ((!isMoving() && mc.gameSettings.keyBindJump.isKeyDown()) || (mc.thePlayer.isCollidedVertically || mc.thePlayer.onGround))
-							funnyY = MathHelper.floor_double(mc.thePlayer.posY);
-					} else
+				if (keepY.isEnabled()) {
+					if ((!isMoving() && mc.gameSettings.keyBindJump.isKeyDown()) || (mc.thePlayer.isCollidedVertically || mc.thePlayer.onGround))
 						funnyY = MathHelper.floor_double(mc.thePlayer.posY);
+				} else
+					funnyY = MathHelper.floor_double(mc.thePlayer.posY);
 
-					if (sprint.getMode().equals("None") && mc.thePlayer.isSprinting()) {
-						mc.thePlayer.setSprinting(false);
-						mc.gameSettings.keyBindSprint.pressed = false;
-					}
-
-					blockPos = new BlockPos(mc.thePlayer.posX, funnyY - 1.0D, mc.thePlayer.posZ);
-					blockData = ScaffoldUtil.getBlockData(blockPos, invalid);
-
-					if (blockData != null) {
-						if (mc.theWorld.getBlockState(blockPos).getBlock() == Blocks.air && PlayerUtil.hasBlockEquipped() && mc.gameSettings.keyBindJump.isKeyDown() && !isMoving()) {
-							mc.thePlayer.motionX = 0;
-							mc.thePlayer.motionZ = 0;
-							switch (tower.getMode()) {
-								case "NCP":
-								case "Slow":
-									if (!mc.thePlayer.isPotionActive(Potion.jump)) {
-										mc.thePlayer.setPosition(mc.thePlayer.posX, Math.floor(mc.thePlayer.posY), mc.thePlayer.posZ);
-										mc.thePlayer.motionY = tower.getMode().equals("Slow") ? 0.37 : 0.42;
-									}
-									break;
-							}
-						}
-
-						float[] rots = RotationUtil.getScaffoldRotations(blockData.getPosition(), blockData.getFace());
-
-						switch (rotations.getMode()) {
-							case "Normal":
-								event.setYaw(rots[0]);
-								event.setPitch(rots[1]);
-								break;
-							case "Opposite Yaw":
-								event.setYaw(mc.thePlayer.rotationYaw - 180);
-								event.setPitch(rots[1]);
-								break;
-							case "Wtf":
-								event.setYaw(mc.thePlayer.rotationYaw - 180);
-
-								if (mc.gameSettings.keyBindJump.isKeyDown() && !isMoving())
-									event.setPitch(89);
-								else
-									event.setPitch(81);
-								break;
-						}
-						if (!rotations.getMode().equals("None")) {
-							mc.thePlayer.rotationYawHead = event.yaw;
-							mc.thePlayer.renderYawOffset = event.yaw;
-							mc.thePlayer.rotationPitchHead = event.pitch;
-						}
-
-						if (PlayerUtil.hasBlockEquipped() && timer.sleep((long) delay.getValue())) {
-							if (placeOnEnd.isEnabled() && !mc.theWorld.getCollidingBoundingBoxes(mc.thePlayer, mc.thePlayer.getEntityBoundingBox().offset(0.0, -0.001D, 0.0)).isEmpty())
-								return;
-
-							if (mc.playerController.onPlayerRightClick(mc.thePlayer, mc.theWorld, mc.thePlayer.inventory.getCurrentItem(), blockData.getPosition(), blockData.getFace(), dataToVec(blockData))) {
-								if (swing.isEnabled())
-									mc.thePlayer.swingItem();
-								else
-									PacketUtil.sendPacket(new C0APacketAnimation());
-
-								rotated = true;
-							}
-						}
-					}
-					break;
-				case "Legit":
-					if(mc.thePlayer.getHeldItem() != null && mc.thePlayer.getHeldItem().getItem() instanceof ItemBlock) {
-						mc.thePlayer.rotationPitch = 82;
-						mc.gameSettings.keyBindUseItem.pressed = true;
-					} else
-						mc.gameSettings.keyBindUseItem.pressed = false;
-					break;
+				if (sprint.getMode().equals("None") && mc.thePlayer.isSprinting()) {
+					mc.thePlayer.setSprinting(false);
+					mc.gameSettings.keyBindSprint.pressed = false;
+				} else {
+					mc.gameSettings.keyBindSprint.pressed = true;
+a
 				}
 
+				blockPos = new BlockPos(mc.thePlayer.posX, funnyY - 1.0D, mc.thePlayer.posZ);
+				blockData = ScaffoldUtil.getBlockData(blockPos, invalid);
+
+				if (blockData != null) {
+					if (mc.theWorld.getBlockState(blockPos).getBlock() == Blocks.air && PlayerUtil.hasBlockEquipped() && mc.gameSettings.keyBindJump.isKeyDown() && !isMoving()) {
+						mc.thePlayer.motionX = 0;
+						mc.thePlayer.motionZ = 0;
+						switch (tower.getMode()) {
+							case "NCP":
+							case "Slow":
+								if (!mc.thePlayer.isPotionActive(Potion.jump)) {
+									mc.thePlayer.setPosition(mc.thePlayer.posX, Math.floor(mc.thePlayer.posY), mc.thePlayer.posZ);
+									mc.thePlayer.motionY = tower.getMode().equals("Slow") ? 0.37 : 0.42;
+								}
+								break;
+						}
+					}
+					if (PlayerUtil.hasBlockEquipped() && timer.sleep((long) delay.getValue()) && mode.getMode().equals("Pre")) {
+						if (placeOnEnd.isEnabled() && !mc.theWorld.getCollidingBoundingBoxes(mc.thePlayer, mc.thePlayer.getEntityBoundingBox().offset(0.0, -0.001D, 0.0)).isEmpty())
+							return;
+
+						if(rayCast.isEnabled() && !overBlock(blockData.getFace(), blockData.getPosition(), strict.isEnabled()))
+							return;
+
+						if (mc.playerController.onPlayerRightClick(mc.thePlayer, mc.theWorld, mc.thePlayer.inventory.getCurrentItem(), blockData.getPosition(), blockData.getFace(), dataToVec(blockData))) {
+							if (swing.isEnabled())
+								mc.thePlayer.swingItem();
+							else
+								PacketUtil.sendPacket(new C0APacketAnimation());
+
+						}
+					}
+				}
 			}
 		}
 	}
@@ -238,8 +256,8 @@ public class Scaffold extends Draggable {
 		EnumFacing face = data.getFace();
 
 		double x = pos.getX() + 0.5,
-		y = pos.getY() + 0.5,
-		z = pos.getZ() + 0.5;
+				y = pos.getY() + 0.5,
+				z = pos.getZ() + 0.5;
 
 		x += (double) face.getFrontOffsetX() / 2;
 		z += (double) face.getFrontOffsetZ() / 2;
@@ -247,4 +265,16 @@ public class Scaffold extends Draggable {
 
 		return new Vec3(x, y, z);
 	}
+
+	public boolean overBlock(final EnumFacing enumFacing, final BlockPos pos, final boolean strict) {
+		final MovingObjectPosition movingObjectPosition = RaycastUtil.getMouseOver(4.5f);
+
+		if (movingObjectPosition == null) return false;
+
+		final Vec3 hitVec = movingObjectPosition.hitVec;
+		if (hitVec == null) return false;
+
+		return movingObjectPosition.getBlockPos() != null && movingObjectPosition.getBlockPos().equals(pos) && (!strict || movingObjectPosition.sideHit == enumFacing);
+	}
+
 }
