@@ -3,6 +3,8 @@ package client.rapid.module.settings;
 import java.util.*;
 
 import client.rapid.Client;
+import client.rapid.event.events.Event;
+import client.rapid.event.events.game.EventSettingChange;
 import client.rapid.module.Module;
 import net.minecraft.client.Minecraft;
 
@@ -57,6 +59,8 @@ public class Setting {
 	public void setMode(String in) {
 		this.sval = in;
 		save();
+
+		Event.dispatch(new EventSettingChange(this));
 	}
 	
 	public ArrayList<String> getOptions() {
@@ -70,8 +74,10 @@ public class Setting {
 	public void setEnabled(boolean in) {
 		this.bval = in;
 		save();
+
+		Event.dispatch(new EventSettingChange(this));
 	}
-	
+
 	public double getValue() {
 		if(onlyInteger) dval = (int) dval;
 		return this.dval;
@@ -80,6 +86,8 @@ public class Setting {
 	public void setValue(double in) {
 		this.dval = in;
 		save();
+
+		Event.dispatch(new EventSettingChange(this));
 	}
 	
 	public double getMin() {
